--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,3 +79,31 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+
+@media-query (max-width: 640px) {
+  main-nav {
+    display: hidden;
+  }
+}
+
+
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
+
+.logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.site_Layout .site_Layout__Background {
+  background: #fff;
+}
