--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
 
+    --danger: 0 70% 50%;
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
@@ -39,6 +41,8 @@
   .dark {
     --background: 224 71% 4%;
     --foreground: 213 31% 91%;
+
+    --danger: 0 70% 50%;
 
     --muted: 223 47% 11%;
     --muted-foreground: 215.4 16.3% 56.9%;
@@ -85,7 +89,6 @@
     display: hidden;
   }
 }
-
 
 .trigger {
   font-size: 18px;
